--- a/index.html
+++ b/index.html
@@ -1,9 +1,12 @@
+
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Appliance Energy Consumption</title>
+    <link rel="stylesheet" href="styles.css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 
 </head>
@@ -187,6 +190,6 @@
             <p>GenAI Acknowledgement: This website was created with assistance from ChatGPT for code structure and content ideas.</p>
         </div>
     </footer>
-
+<script src="script.js"></script>
 </body>
 </html>
