--- a/about.html
+++ b/about.html
@@ -3,33 +3,30 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Appliance Energy Consumption - Home</title>
-  <link rel="stylesheet" href="styles.css">
+  <title>About Us - Appliance Energy Consumption</title>
+  <link rel="stylesheet" href="style.css">
   <script src="script.js" defer></script>
 </head>
 <body>
-  <!-- Navigation -->
   <header>
     <nav class="navbar">
       <a href="index.html" class="logo">
         <img src="PowerIcon.png" alt="Power Logo">
       </a>
       <ul class="nav-links">
-        <li><a href="index.html" class="active">Home</a></li>
+        <li><a href="index.html">Home</a></li>
         <li><a href="televisions.html">Televisions</a></li>
-        <li><a href="about.html">About Us</a></li>
+        <li><a href="about.html" class="active">About Us</a></li>
       </ul>
     </nav>
   </header>
 
-  <!-- Main Content -->
   <main>
-    <h1>Welcome to Appliance Energy Consumption</h1>
-    <p>This site explores energy efficiency of appliances in the Australian market.</p>
-    <p>Navigate through the pages to see insights on televisions and learn more about us.</p>
+    <h1>About This Project</h1>
+    <p>This website was built as part of COS30045 Data Visualisation coursework.</p>
+    <p>It demonstrates how HTML, CSS, and JavaScript can be used to explore appliance energy consumption.</p>
   </main>
 
-  <!-- Footer -->
   <footer>
     <p>&copy; 2025 Your Name | Built with HTML, CSS, JS | GenAI used for assistance</p>
   </footer>
