--- a/televisions.html
+++ b/televisions.html
@@ -3,33 +3,35 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Appliance Energy Consumption - Home</title>
-  <link rel="stylesheet" href="styles.css">
+  <title>Televisions - Appliance Energy Consumption</title>
+  <link rel="stylesheet" href="style.css">
   <script src="script.js" defer></script>
 </head>
 <body>
-  <!-- Navigation -->
   <header>
     <nav class="navbar">
       <a href="index.html" class="logo">
         <img src="PowerIcon.png" alt="Power Logo">
       </a>
       <ul class="nav-links">
-        <li><a href="index.html" class="active">Home</a></li>
-        <li><a href="televisions.html">Televisions</a></li>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="televisions.html" class="active">Televisions</a></li>
         <li><a href="about.html">About Us</a></li>
       </ul>
     </nav>
   </header>
 
-  <!-- Main Content -->
   <main>
-    <h1>Welcome to Appliance Energy Consumption</h1>
-    <p>This site explores energy efficiency of appliances in the Australian market.</p>
-    <p>Navigate through the pages to see insights on televisions and learn more about us.</p>
+    <h1>Television Energy Consumption</h1>
+    <p>Explore the average power use of TVs by screen technology and size.</p>
+    <ul>
+      <li>LCD: 100–150W</li>
+      <li>LED: 60–120W</li>
+      <li>OLED: 90–130W</li>
+    </ul>
+    <p>Energy ratings in Australia help consumers identify efficient models.</p>
   </main>
 
-  <!-- Footer -->
   <footer>
     <p>&copy; 2025 Your Name | Built with HTML, CSS, JS | GenAI used for assistance</p>
   </footer>
