--- a/televisions.html
+++ b/televisions.html
@@ -84,10 +84,10 @@
                 </div>
             </div>
             
-            <div class="chart-container">
+            <!-- <div class="chart-container piechart">
                 <h3 class="chart-title">TV Technology Market Share in Australia</h3>
                 <canvas id="marketChart"></canvas>
-            </div>
+            </div> -->
             
             <div class="energy-info">
                 <h2>Energy Saving Tips for TVs</h2>
