--- a/televisions.html
+++ b/televisions.html
@@ -1,27 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta c            </div>
-
-            <!-- Research Process Reference -->
-            <div class="research-process">
-                <div class="process-card">
-                    <div class="process-icon">📋</div>
-                    <h3>Research Storyboard</h3>
-                    <p>View our complete data exploration process and question development storyboard:</p>
-                    <a href="https://miro.com/app/board/uXjVJBvHBOM=/" target="_blank" class="miro-link">
-                        <i class="fas fa-external-link-alt"></i> Interactive Storyboard on Miro
-                    </a>
-                    <p class="storyboard-note">Explore how we developed our 6 key research questions and analysis approach</p>
-                </div>
-            </div>
-
-            <!-- Chart 1: Technology Distribution -->
-            <section class="chart-section">
-                <div class="section-header">
-                    <h2>1. TV Screen Technologies in Australian Market</h2>
-                    <p class="section-subtitle">Which technologies are most common?</p>
-                </div>UTF-8">
+    <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>PowerSave - TV Energy Insights</title>
     <link rel="stylesheet" href="styles.css">
@@ -55,6 +35,8 @@
                 <p class="intro-text">Australian households waste over <strong>$50 million annually</strong> on inefficient television energy consumption. Discover how smart choices can save you money and reduce environmental impact.</p>
             </div>
 
+            
+
             <!-- Key Insight Summary -->
             <div class="key-insights">
                 <div class="insight-card">
@@ -71,6 +53,19 @@
                     <div class="insight-icon">⚡</div>
                     <h3>Energy Usage</h3>
                     <p>TVs account for 8% of average household electricity use</p>
+                </div>
+            </div>
+
+            <!-- Storyboard Reference -->
+            <div class="storyboard-compact">
+                <div class="storyboard-content">
+                    <span class="storyboard-icon">📋</span>
+                    <div class="storyboard-text">
+                        <strong>Research Process:</strong> 
+                        <a href="https://miro.com/app/board/uXjVJBvHBOM=/" target="_blank" class="storyboard-link">
+                            View Interactive Miro Storyboard <i class="fas fa-external-link-alt"></i>
+                        </a>
+                    </div>
                 </div>
             </div>
 
@@ -411,15 +406,6 @@
             <div class="data-source">
                 <h3>About Our Data</h3>
                 <p>This analysis is based on Australian Government Energy Rating Data for household appliances which contains information about the energy consumption of televisions sold in Australia.</p>
-                
-                <h4>StoryBoard</h4>
-                <p>Our data story was developed through a structured research process documented in our interactive storyboard:</p>
-                <div class="reference-link">
-                    <a href="https://miro.com/app/board/uXjVJBvHBOM=/" target="_blank" class="miro-reference">
-                        <strong>📋 View Complete Storyboard Process</strong>
-                        <span class="link-description"> Miro board showing question development and analysis workflow</span>
-                    </a>
-                </div>
             </div>
         </div>
     </main>
